syntax = "proto3";

package chat;

service ChatGrpcService {
  rpc createConversation (CreateConversationRequest) returns (CreateConversationResponse) {}
  rpc addMemberToConversation (AddMemberToConversationRequest) returns (AddMemberToConversationResponse) {}
  rpc getConversations (GetConversationsRequest) returns (GetConversationsResponse) {}
  rpc getMessagesByConversationId (GetMessagesRequest) returns (GetMessagesResponse) {}
  rpc getConversationAssets (GetConversationAssetsRequest) returns (GetConversationAssetsResponse) {}
  rpc sendMessage (SendMessageRequest) returns (SendMessageResponse) {}
  rpc createMessageUploadUrl (CreateMessageUploadUrlRequest) returns (CreateMessageUploadUrlResponse) {}
  rpc readMessage (ReadMessageRequest) returns (ReadMessageResponse) {}
  rpc searchConversations (SearchConversationRequest) returns (SearchConversationResponse) {}
  rpc getConversationByFriendId (GetConversationByFriendIdRequest) returns (GetConversationByFriendIdResponse) {}
}

enum ConversationAssetKind {
  ASSET_MEDIA = 0;
  ASSET_LINK = 1;
  ASSET_DOC = 2;
}

enum MessageType {
  TEXT = 0;
  IMAGE = 1;
  VIDEO = 2;
  FILE = 3;
}

enum MediaType {
  MEDIA_IMAGE = 0;
  MEDIA_VIDEO = 1;
  MEDIA_FILE = 2;
}

message MessageMedia {
  string id = 1;
  string messageId = 2;
  MediaType mediaType = 3;
  string objectKey = 4;
  string url = 5;
  string mimeType = 6;
  string size = 7;
  optional int32 width = 8;
  optional int32 height = 9;
  optional float duration = 10;
  optional string thumbnailUrl = 11;
  int32 sortOrder = 12;
}

message Member {
  string username = 1;
  optional string avatar = 2;
  string userId = 3;
  optional string lastReadAt = 4;
  optional string fullName = 5;
}

message CreateConversationRequest {
  string type = 1;
  repeated Member members = 2;
  optional string groupName = 3;
  optional bytes groupAvatar = 4;
  optional string groupAvatarFilename = 5;
  optional string createrId = 6;
}

message CreateConversationResponse {
  Conversation conversation = 1;
}

message AddMemberToConversationRequest {
  string conversationId = 1;
  repeated Member members = 2;
  string userId = 3;
}

message AddMemberToConversationResponse {
  string status = 1;
}

message GetConversationsRequest {
  string userId = 1;
  string limit = 2;
  string cursor = 3;
}

message Message {
  string id = 1;
  string conversationId = 2;
  string senderId = 3;
  string text = 4;
  optional string replyToMessageId = 5;
  bool isDeleted = 6;
  string deleteType = 7;
  string createdAt = 8;
  SenderMember senderMember = 9;
  MessageType type = 10;
  optional string clientMessageId = 11;
  repeated MessageMedia medias = 12;
}

message ConversationMember {
  string userId = 1;
  optional string lastReadAt = 2; // timestamp (ms)
  optional string username = 3;
  optional string avatar = 4;
  optional string lastReadMessageId = 5;
  optional string fullName = 6;
  string lastMessageAt = 7;
}

message Conversation {
  string id = 1;
  string type = 2;
  string unreadCount = 3;

  optional string groupName = 4;   
  optional string groupAvatar = 5;

  string createdAt = 6;
  optional string updatedAt = 7;

  repeated ConversationMember members = 8;
  optional Message lastMessage = 9;
}

message GetConversationsResponse {
  repeated Conversation conversations = 1;
}

message GetMessagesRequest {
  string conversationId = 1;
  string userId = 2;
  string limit = 3;
  string page = 4;
  optional string cursor = 5;
}

message SenderMember {
  string userId = 1;
  string username = 2;
  string avatar = 3;
  optional string fullName = 4;
}


message GetMessagesResponse {
  repeated Message messages = 1;
}

message GetConversationAssetsRequest {
  string conversationId = 1;
  string userId = 2;
  ConversationAssetKind kind = 3;
  string limit = 4;
  optional string cursor = 5;
}

message GetConversationAssetsResponse {
  repeated Message messages = 1;
  optional string nextCursor = 2;
}

message SendMessageRequest {
  string conversationId = 1;
  optional string message = 2;
  string senderId = 3;
  optional string replyToMessageId = 4;
  MessageType type = 5;
  repeated SendMessageMediaInput medias = 6;
  optional string clientMessageId = 7;
}

message SendMessageMediaInput {
  MediaType mediaType = 1;
  string objectKey = 2;
  string url = 3;
  string mimeType = 4;
  string size = 5;
  optional int32 width = 6;
  optional int32 height = 7;
  optional float duration = 8;
  optional string thumbnailUrl = 9;
  int32 sortOrder = 10;
}

message SendMessageResponse {
  Message message = 1; 
}

message CreateMessageUploadUrlRequest {
  string conversationId = 1;
  string userId = 2;
  MessageType type = 3;
  string mimeType = 4;
  string fileName = 5;
  string size = 6;
}

message CreateMessageUploadUrlResponse {
  string uploadUrl = 1;
  string objectKey = 2;
  string publicUrl = 3;
  string expiresInSeconds = 4;
}

message ReadMessageRequest {
  string conversationId = 1;
  string lastReadMessageId = 2;
  string userId = 3;
}

message ReadMessageResponse {
  string lastReadMessageId = 1;
}

message SearchConversationRequest {
  string userId = 1;
  string keyword = 2;
}

message SearchConversationResponse {
  repeated Conversation conversations = 1;
}

message GetConversationByFriendIdRequest {
  string friendId = 1;
  string userId = 2;
}

message GetConversationByFriendIdResponse {
  Conversation conversation = 1;
}