syntax = "proto3";

package user;

service UserGrpcService {
  rpc register (UserRegisterRequest) returns (UserRegisterResponse) {}
  rpc login (UserLoginRequest) returns (UserLoginResponse) {}
  rpc makeFriend (MakeFriendRequest) returns (MakeFriendResponse) {}
  rpc updateStatusMakeFriend (UpdateStatusRequest) returns (UpdateStatusResponse) {}
  rpc listFriends (ListFriendsRequest) returns (ListFriendsResponse) {}
  rpc detailMakeFriend (DetailMakeFriendRequest) returns (DetailMakeFriendResponse) {}
}

message UserRegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message UserRegisterResponse {
  string id = 1;
  string email = 2;
  string username = 3;
}

message UserLoginRequest {
  string email = 1;
  string password = 2;
}

message UserLoginResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  string token = 4;
}

message MakeFriendRequest {
  string inviterId = 1;
  string inviteeEmail = 2;
  string inviterName = 3;
}

message MakeFriendResponse {
  string status = 1;
}

message UpdateStatusRequest {
  string inviteeId = 1;
  string status = 2;
  string inviterId = 3;
  string inviteeName = 4;
}

message UpdateStatusResponse {
  string status = 2;
}

message Friend {
  string id = 1;
  string email = 2;
  string username = 3;
  string avatar = 4;
}

message ListFriendsRequest {
  string userId = 1;
}

message ListFriendsResponse {
  repeated Friend friends = 1;
}

message DetailMakeFriendRequest {
  string friendRequestId = 1;
}

message FromUser {
  string email = 1;
  string username = 2;
  string avatar = 3;
  string id = 4;
}

message DetailMakeFriendResponse {
  string id = 1;
  FromUser fromUser = 2;
  string toUserId = 3;
  string status = 4;
  string createdAt = 5;
  string updatedAt = 6;
}